Configured the unit testing into not using mock users